# ChangeLog for dev-util/global
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/global/ChangeLog,v 1.30 2008/06/29 17:59:26 darkside Exp $

*global-5.7.1 (29 Jun 2008)

  29 Jun 2008; Jeremy Olexa <darkside@gentoo.org> -global-4.7.2.ebuild,
  -global-5.3.ebuild, -global-5.6.1.ebuild, +global-5.7.1.ebuild:
  Version bump, bug #217405. Remove old versions

  21 May 2008; Tiziano Müller <dev-zero@gentoo.org> global-4.7.2.ebuild:
  Changed dependency for postgresql from dev-db/postgresql to
  virtual/postgresql-server

  20 Apr 2008; Markus Meier <maekke@gentoo.org> global-5.6.2.ebuild:
  x86 stable, bug #217407

  21 Mar 2008; Tiziano Müller <dev-zero@gentoo.org> global-5.6.2.ebuild:
  Fixed minorsyns and shortened description.

  21 Mar 2008; Tiziano Müller <dev-zero@gentoo.org> global-5.6.2.ebuild:
  Changed dependency to allow gvim as vim-dependency.

*global-5.6.2 (08 Jan 2008)

  08 Jan 2008; Carsten Lohrke <carlo@gentoo.org> +global-5.6.2.ebuild:
  Version bump.

*global-5.6.1 (27 Aug 2007)

  27 Aug 2007; Raúl Porcel <armin76@gentoo.org> -global-4.5.ebuild,
  global-4.7.2.ebuild, -global-5.2.ebuild, global-5.3.ebuild,
  +global-5.6.1.ebuild:
  Version bump, bug 175417, x86 stable, remove old

  14 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

*global-5.3 (24 Jan 2007)

  24 Jan 2007; Alec Warner <antarus@gentoo.org> +global-5.3.ebuild:
  bump to 5.3

  06 Jan 2007; Danny van Dyk <kugelfang@gentoo.org> -global-4.8.2.ebuild,
  -global-4.8.7.ebuild:
  QA: Removed unused versions.

*global-5.2 (19 Aug 2006)

  19 Aug 2006; Stephanie Lockwood-Childs <wormo@gentoo.org>
  +global-5.2.ebuild:
  version bump, suggested by yusuke iijima (Bug #141970)

*global-4.8.7 (31 Jan 2006)

  31 Jan 2006; Luis Medinas <metalgod@gentoo.org> +global-4.8.7.ebuild: