@@ -1,7 +1,17 @@
-AUX 50gtags-gentoo.el 184 RMD160 38ffa8e74a0617fd5742eb88c9aac42c9de53edc SHA1 351967e4b6bcef1043a634de2ea3dab9724ca457 SHA256 8453e25df3e5d19222539aa8f477fc6ae1b6ac7e9fed98013c25fdf77a98e006
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+AUX 50gtags-gentoo.el 183 RMD160 cf95e9970c71dd14fad6234ed57b8354d45ead74 SHA1 b338f4153d2cb31e8495a7b640e0e4887dc60ecd SHA256 52531e861595504a3461a483dfc05520acef423932e273cd26461aee66082428
 DIST global-5.6.2.tar.gz 739856 RMD160 70862a2d79ec8fe97caa63416c1c945913fe0065 SHA1 0f594e1c10ab04db6dbd3e7bd6d6e16dd3c58ffa SHA256 988f5eb7770780c4b816bf38d26fa63fe85bef7ca27fd09cfb9c64b77466cb25
 DIST global-5.7.1.tar.gz 739157 RMD160 f46bd9e7d45a2c8cb130bcbade85c0d233f9bd96 SHA1 015dce234675714c2e7fc29cb17fe559c175c5f9 SHA256 e6076a98c8a35d26e606a8995ef141c8dbfbb206034311bc3050f1a7dd0fc70e
-EBUILD global-5.6.2.ebuild 1508 RMD160 bc890483a0e1e5f962725773ff051b8bae51ea0b SHA1 9fc4d053f9305c2b9403b8701ca35fc368a86cf2 SHA256 31afd6414df7cf700e1c4414e08a89ba1f12aacb841d70c60f640459e06e1e00
-EBUILD global-5.7.1.ebuild 1511 RMD160 1fc5c411bb057fc1c845bcb3119883496163f6c2 SHA1 2a6e2cdfa237c83c0e24cbd1bd6c25bbbc90dc9c SHA256 23a4425cbcb7f1418b558ef7ddf92f19b625a57f9e07548b59f0e9f6a44d0163
-MISC ChangeLog 4332 RMD160 17f7ef436f381024169f8266c0c0959c3460b34c SHA1 15f5b5b98eb1d3f7208155ac59a75d51383239cb SHA256 b884fc078cfd7f2a63df15e76267b2ba8ad631f0e495b20ee534ad98a8e79ee7
+EBUILD global-5.6.2.ebuild 1531 RMD160 9d8143b7c6ba0c3cccd47cd085e5ee42ed6f2c53 SHA1 ac6b092c92b527f6e820cda1b62f6bfb4bef73a7 SHA256 652660ec1bcb908a1d1bef220b6b82b1e361edec71063fea35b3b5fbc5ff081b
+EBUILD global-5.7.1.ebuild 1532 RMD160 5383ca9d32fc3ae1ef593caf52959c808fc1f568 SHA1 a700ed4bcb4a44f04ca1fda3da3239fb1bc30656 SHA256 146d8b1184b3164cb59228acfa04e0985b9a3bcebbea3a03a81b87f1f6b7562b
+MISC ChangeLog 4474 RMD160 37b838284394ff4c89763e7834c89c4da413291b SHA1 9afa119d5b6f5e74c64a6f9f1388a1ec29d31984 SHA256 2fc92c64cfaecfcc30089c73044a11aebd760ecf497d410fbcacc9809def6ce5
 MISC metadata.xml 313 RMD160 e7b0430c75574b56e03011d92237e425eeee66f4 SHA1 dcf1d8a71c2860c2669f09481c05fd9d99b69f1d SHA256 659abc443c2c3455af1667d06f83099cac8d6f2d46fbd8dca0febd7d9688a7e2
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.9 (GNU/Linux)
+
+iEYEARECAAYFAkiwu8EACgkQOeoy/oIi7uxiWgCghL2pp3upGxfvGfGdT0ar2GGb
+QDwAnA+OuDGzCc5UvynzApTCOUx6MgnH
+=jhgs
+-----END PGP SIGNATURE-----
