@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/global
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/global/ChangeLog,v 1.30 2008/06/29 17:59:26 darkside Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/global/ChangeLog,v 1.31 2008/08/24 01:38:53 ulm Exp $
+
+  24 Aug 2008; Ulrich Mueller <ulm@gentoo.org> global-5.6.2.ebuild,
+  global-5.7.1.ebuild:
+  Use elisp-compile instead of elisp-comp, bug 235586.
 
 *global-5.7.1 (29 Jun 2008)
 
